# LiteRT

./: .gitignore  .gitmodules  .mailmap  BruteForceRT.cpp  CMakeLists.txt  IRenderer.h  ISceneObject.h  LiteRT.h  Makefile  README.md  README.txt  RTX_benchmark.sh  Timer.cpp  Timer.h  compile_commands.json  convert.py  converter.ipynb  force_nv_gpu.sh  generate_gaussians.py  imgui.ini  main.cpp  main_benchmark.sh  preprocess_gs.py  raytrace_common.h  render_common.h  render_settings.h  script.sh  slicer_execute.sh  slicer_execute_mini.sh  slicer_preprocess.sh  slicer_settings.txt  toGIF.py
BVH/: BVH2Common.cpp  BVH2Common.h  BVH2Common_host.cpp  cbvh.cpp  cbvh.h  cbvh_embree2.cpp  cbvh_fat.cpp  equation_solvers.cpp  equation_solvers.h  precompute_matrix.h
NeuralRT/: NeuralRT.cpp  NeuralRT.h
Renderer/: eye_ray.cpp  eye_ray.h  eye_ray_generated.cpp  eye_ray_generated.h  eye_ray_generated_ds.cpp  eye_ray_generated_init.cpp  eye_ray_gpu.cpp  eye_ray_gpu.h  eye_ray_gpu_ds.cpp  eye_ray_gpu_init.cpp  eye_ray_gpu_rq.cpp  eye_ray_gpu_rq.h  eye_ray_gpu_rq_ds.cpp  eye_ray_gpu_rq_init.cpp  eye_ray_host.cpp  eye_ray_temp.cpp
benchmark/: benchmark_app.cpp  benchmark_app.h  config.blk  config2.blk  config_coctree.blk  config_coctree2.blk  config_h.blk  config_n.blk  config_n2.blk  defaults.blk  demo_config.blk  enums.blk
benchmark_backend/: benchmark_backend.cpp  benchmark_backend.h  benchmark_backend.hpp
catmul_clark/: catmul_clark.h  catmul_clark_host.cpp  catmul_clark_host.h
cmake/: CompilerWarnings.cmake
dependencies/: FLIP.h  span.h
dependencies/HydraCore3/: CMakeLists.txt  LICENSE  README.md  hydra_xml_materials.md  imageutils.cpp  imageutils.h  imageutils_gbuffer.cpp  integrator_gbuffer.cpp  integrator_pt.cpp  integrator_pt.h  integrator_pt_generated.cpp  integrator_pt_generated.h  integrator_pt_generated_ds.cpp  integrator_pt_generated_init.cpp  integrator_pt_host.cpp  integrator_pt_lgt.cpp  integrator_pt_mat.cpp  integrator_pt_scene.cpp  integrator_pt_scene.h  integrator_pt_scene_lgt.cpp  integrator_pt_scene_mat.cpp  integrator_pt_scene_tex.cpp  integrator_pt_temp.cpp  integrator_rt.cpp  integrator_spectrum.cpp  libspectral.cmake  main.cpp  mi_materials.cpp  mi_materials.h  spectrum.cpp  spectrum.h  user_guide.md  utils.cpp  utils.h
dependencies/HydraCore3/cam_plugin/: CamPinHole.cpp  CamPinHole.h  CamPluginAPI.h  CamTableLens.cpp  CamTableLens.h  main_with_cam.cpp  main_with_cam_gpu.cpp
dependencies/HydraCore3/cmake/: CompilerWarnings.cmake
dependencies/HydraCore3/diff_render/: adam.h  drmain.cpp  integrator_dr.cpp  integrator_dr.h  integrator_dr2.cpp
dependencies/HydraCore3/ies_parser/: ies_render.cpp
dependencies/HydraCore3/include/: Integrator_generated_ubo.h  airy_reflectance.h  cglobals.h  clight.h  cmat_conductor.h  cmat_conductor2.h  cmat_dielectric.h  cmat_diffuse.h  cmat_film.h  cmat_glass.h  cmat_gltf.h  cmat_plastic.h  cmaterial.h  crandom.h  transfer_matrix.h
dependencies/HydraCore3/mlt/: integrator_kmlt.cpp  integrator_qmc.cpp  integrator_qmc.h  rnd_qmc.cpp  rnd_qmc.h
dependencies/HydraCore3/scenes/data/spd/: uniform1.spd
dependencies/HydraCore3/scenes/test_035/: motion_test.xml  statex_00001.xml
dependencies/HydraCore3/scenes/test_035/data/: chunk_00002.vsgf  chunk_00003.vsgf  chunk_00004.vsgf
dependencies/HydraCore3/scenes/test_228/: statex_00001.xml
dependencies/HydraCore3/scenes/test_228/data/: chunk_00002.vsgf  chunk_00003.vsgf
dependencies/HydraCore3/scenes/test_spectral/: spectral_cornell_conductor.xml
dependencies/HydraCore3/shaders_generated/: CastSingleRayMega.comp  CastSingleRayMega.comp.spv  NaivePathTraceMega.comp  NaivePathTraceMega.comp.spv  PackXYMega.comp  PackXYMega.comp.spv  PathTraceFromInputRaysMega.comp  PathTraceFromInputRaysMega.comp.spv  PathTraceMega.comp  PathTraceMega.comp.spv  RayTraceMega.comp  RayTraceMega.comp.spv  build.sh  common_generated.h
dependencies/HydraCore3/testing/: perf.txt  run_tests.py  testing_doc.md
diff_render/: BVH2DR.cpp  BVH2DR.h  DR_common.cpp  DR_common.h  MultiRendererDR.cpp  MultiRendererDR.h  benchmark_diff_render.cpp  tests_diff_render.cpp  tricub.py
examples/: RBCurve2D.cpp  argsplit.cpp  bisection.cpp  cmesh.cpp  example_div_individual.cpp  example_print.cpp  nurbss_stdout.cpp  nurbss_tofile.cpp  stl.cpp
graphics_primitive/: graphics_primitive_common.h
harmonic_function/: any_polygon_common.h
include/: Timer.h  step.h  stp_parser.hpp
nurbs/: ispc_ray_pack.ispc  nurbs_common.cpp  nurbs_common.h  nurbs_common_host.cpp  nurbs_common_host.h  raytracer.cpp  raytracer.hpp  utils.hpp  viewer.cpp
openvdb_structs/: openvdb_common.cpp  openvdb_common.h  openvdb_structs.cpp  openvdb_structs.h
other_materials/: 11_05_perf_data.txt
render_engine/: glfw_window.cpp  glfw_window.h  gltf_utils.cpp  gltf_utils.h  image_loader.cpp  image_loader.h  input_definitions.h  main.cpp  my_imgui_config.h  render_gui.h  (+6 more)
step/: .clang-format  CMakeLists.txt  format-files
step/examples/: argsplit.cpp  cmesh.cpp  nurbss_stdout.cpp  nurbss_tofile.cpp  stl.cpp
step/include/: cmesh4.h  step.h  stlmesh.h
step/resources/: teapot.step
step/src/: cmesh4.cpp  step.cpp  stlmesh.cpp
testing_framework/: CMakeLists.txt
testing_framework/core/: CMakeLists.txt  actions.cpp  actions.h  add_test.h  cli.cpp  cli.h  cmdline_parser.h  colors.cpp  colors.h  commands.cpp  commands.h  env.cpp  env.h  environment.cpp  environment.h  exe.cpp  exe.h  execution.cpp  execution.h  filters.cpp  filters.h  help.cpp  help.h  logging.cpp  logging.h  main.cpp  param_parsers.cpp  param_parsers.h  param_validators.cpp  param_validators.h  run_supervised.cpp  run_supervised.h  supervisor.cpp  supervisor.h  test.cpp  test.h  test_options.cpp  test_options.h
testing_framework/helpers/: CMakeLists.txt  check.cpp  check.h  files.cpp  files.h  format.h  image.cpp  image.h  init.cpp  init.h  mesh.cpp  mesh.h  options.cpp  options.h  render.cpp  render.h  scoped_timer.cpp  scoped_timer.h  source_location.cpp  source_location.h
testing_framework/logging/: CMakeLists.txt  color.cpp  color.h  colored_ostream.h  log.h
(+357 files in other folders)
